--- a/angular-app/src/app/nav/nav.component.html
+++ b/angular-app/src/app/nav/nav.component.html
@@ -30,12 +30,12 @@
                             data-toggle="dropdown" class="nav-link dropdown-user-link"><span>ERP </span><i
                                 class="pi pi-chevron-down"></i></a>
                         <div class="dropdown-menu dropdown-menu-right"><a href="#" class="dropdown-item"><i
-                                    class="icon-head"></i> Edit Profile</a><a href="#" class="dropdown-item"><i
-                                    class="icon-mail6"></i> My Inbox</a><a href="#" class="dropdown-item"><i
-                                    class="icon-clipboard2"></i> Task</a><a href="#" class="dropdown-item"><i
-                                    class="icon-calendar5"></i> Calender</a>
+                                    class="icon-head"></i> dropdown item 1</a><a href="#" class="dropdown-item"><i
+                                    class="icon-mail6"></i> dropdown item 1</a><a href="#" class="dropdown-item"><i
+                                    class="icon-clipboard2"></i> dropdown item 1</a><a href="#" class="dropdown-item"><i
+                                    class="icon-calendar5"></i> item</a>
                             <div class="dropdown-divider"></div><a href="#" class="dropdown-item"><i
-                                    class="icon-power3"></i> Logout</a>
+                                    class="icon-power3"></i> item</a>
                         </div>
                     </li>
                 </ul>
@@ -54,27 +54,28 @@
     <div class="main-menu-content">
         <ul id="main-menu-navigation" data-menu="menu-navigation" class="navigation navigation-main">
 
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-home"></i><span
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-home"></i><span
                         class="menu-title">Dashboard</span></a>
             </li>
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-code-branch"></i><span
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-code-branch"></i><span
                         class="menu-title">Masters</span></a>
             </li>
             <li class=" nav-item"><a routerLink="BillOfMaterial"><i class="fas fa-money-bill-wave"></i><span
                         class="menu-title">Purchase</span></a>
             </li>
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-store"></i><span class="menu-title">Store</span></a>
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-store"></i><span
+                        class="menu-title">Store</span></a>
             </li>
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-comments-dollar"></i><span
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-comments-dollar"></i><span
                         class="menu-title">Sale</span></a>
             </li>
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-file-invoice-dollar"></i><span
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-file-invoice-dollar"></i><span
                         class="menu-title">GST</span></a>
             </li>
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-sliders-h"></i><span
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-sliders-h"></i><span
                         class="menu-title">Utility</span></a>
             </li>
-            <li class=" nav-item"><a routerLink=""><i class="fas fa-user"></i><span
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-user"></i><span
                         class="menu-title">Account</span></a>
             </li>
         </ul>
