added store and sales

--- a/angular-app/src/app/bom/bom.component.html
+++ b/angular-app/src/app/bom/bom.component.html
@@ -88,8 +88,8 @@
                 </p-table>
             </p-card>
         </div>
-        <p-dialog header="Bill Of Material" [(visible)]="displayBasic" [style]="{width: '95vw'}" [maximizable]="true"
-            [baseZIndex]="10000" [closable]="false">
+        <p-dialog header="Bill Of Material" [(visible)]="displayBasic" [style]="{width: '95vw'}" [baseZIndex]="10000"
+            [closable]="false">
             <p-toast key="t2"></p-toast>
             <p-confirmDialog [style]="{width: '30vw'}" [baseZIndex]="10000"></p-confirmDialog>
             <ng-template pTemplate="content">
