--- a/angular-app/src/app/bom/bom.component.html
+++ b/angular-app/src/app/bom/bom.component.html
@@ -1,3 +1,108 @@
+<div data-scroll-to-active="true" class="main-menu menu-fixed menu-dark menu-accordion menu-shadow">
+    <!-- main menu header-->
+    <!-- <div class="main-menu-header"> -->
+    <!-- <input type="text" placeholder="Search" class="menu-search form-control round" /> -->
+    <!-- </div> -->
+    <!-- / main menu header-->
+    <!-- main menu content-->
+    <div class="main-menu-content">
+        <ul id="main-menu-navigation" data-menu="menu-navigation" class="navigation navigation-main">
+
+            <li class=" nav-item"><a (click)="router.navigate(['home'])"><i class="fas fa-home"></i><span
+                        class="menu-title">Dashboard</span></a>
+            </li>
+            <!-- <li class=" nav-item"><a routerLink="#"><i class="fas fa-code-branch"></i><span
+                        class="menu-title">Masters</span></a>
+            </li>
+            <li class=" nav-item"><a routerLink="BillOfMaterial"><i class="fas fa-money-bill-wave"></i><span
+                        class="menu-title">Purchase</span></a>
+            </li> -->
+            <li class=" nav-item"><a (click)="router.navigate(['store'])"><i class="fas fa-store"></i><span
+                        class="menu-title">Store</span></a>
+            </li>
+            <li class=" nav-item"><a (click)="router.navigate(['sales'])"><i class="fas fa-comments-dollar"></i><span
+                        class="menu-title">Sale</span></a>
+            </li>
+            <!-- <li class=" nav-item"><a routerLink="#"><i class="fas fa-file-invoice-dollar"></i><span
+                        class="menu-title">GST</span></a>
+            </li>
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-sliders-h"></i><span
+                        class="menu-title">Utility</span></a>
+            </li>
+            <li class=" nav-item"><a routerLink="#"><i class="fas fa-user"></i><span
+                        class="menu-title">Account</span></a>
+            </li> -->
+        </ul>
+    </div>
+    <!-- /main menu content-->
+    <!-- main menu footer-->
+    <!-- include includes/menu-footer-->
+    <!-- main menu footer-->
+</div>
+<!-- / main menu-->
+<nav class="header-navbar navbar navbar-with-menu navbar-fixed-top navbar-semi-dark navbar-shadow">
+    <div class="navbar-wrapper">
+        <div class="navbar-header">
+            <ul class="nav navbar-nav">
+                <li class="nav-item mobile-menu hidden-md-up float-xs-left"><a
+                        class="nav-link nav-menu-main menu-toggle hidden-xs"><i class="pi pi-align-justify"
+                            style="font-size: 2rem"></i></a>
+                </li>
+                <li class="nav-item"><a routerLink="" class="navbar-brand nav-link"><img alt="branding logo"
+                            src="assets/images/logo/logo-small.png" data-expand="assets/images/logo/logo-light.png"
+                            data-collapse="assets/images/logo/logo-small.png" class="brand-logo"></a>
+                </li>
+                <li class="nav-item hidden-md-up float-xs-right"><a data-toggle="collapse" data-target="#navbar-mobile"
+                        class="nav-link open-navbar-container"><i class="pi pi-ellipsis-h"></i></a></li>
+            </ul>
+        </div>
+        <div class="navbar-container content container-fluid">
+            <div id="navbar-mobile" class="collapse navbar-toggleable-sm">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item hidden-sm-down"><a class="nav-link nav-menu-main menu-toggle hidden-xs"><i
+                                class="pi pi-align-justify"> </i></a></li>
+                    <li class="nav-item"><a class="nav-link hidden-xs">FY 2020-2021</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link hidden-xs" (click)="router.navigate(['sales/masters'])"><i
+                                class="fas fa-code-branch" style="font-size:0.9rem;"></i>Masters</a></li> -->
+                    <li class="dropdown dropdown-user nav-item" style="padding-top:10px;"><a href="#"
+                            data-toggle="dropdown" class="nav-link dropdown-user-link"><i class="fas fa-code-branch"
+                                style="font-size:0.9rem;"></i>Masters<i class="fas fa-caret-down"></i></a>
+                        <div class="dropdown-menu dropdown-menu-right"><a href="#" class="dropdown-item">Item Master</a>
+                        </div>
+                    </li>
+                    <li class="dropdown dropdown-user nav-item" style="padding-top:10px;"><a href="#"
+                            data-toggle="dropdown" class="nav-link dropdown-user-link"><i class="fas fa-exchange-alt"
+                                style="font-size:0.9rem;"></i>Transaction<i class="fas fa-caret-down"></i></a>
+                        <div class="dropdown-menu dropdown-menu-right"><a
+                                (click)="router.navigate(['sales/transaction/BillOfMaterial'])"
+                                class="dropdown-item">Bill Of Material</a>
+                        </div>
+                    </li>
+
+                    <!-- <li class="nav-item"><a class="nav-link hidden-xs"
+                            (click)="router.navigate(['sales/transaction'])"><i class="fas fa-exchange-alt"
+                                style="font-size:0.9rem;"></i>Transaction</a>
+                    </li> -->
+                    <li class="nav-item"><a class="nav-link hidden-xs" (click)="router.navigate(['sales/reports'])"><i
+                                class="fas fa-file-alt" style="font-size:0.9rem;"></i>Reports</a></li>
+
+
+                </ul>
+                <ul class="nav navbar-nav float-xs-right">
+
+
+                    <li class="dropdown dropdown-user nav-item" style="padding-top:10px;"><a href="#"
+                            data-toggle="dropdown" class="nav-link dropdown-user-link"><span>{{user}}</span><i
+                                class="fas fa-caret-down"></i></a>
+                        <div class="dropdown-menu dropdown-menu-right"><a (click)="router.navigate(['logout'])"
+                                class="dropdown-item"><i class="fas fa-sign-out-alt"></i> logout</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
 <!-- screen middle container -->
 <div class="app-content content container-fluid">
     <div class="content-wrapper">
