--- a/angular-app/src/app/sales/sales-masters/sales-item-master/sales-item-master.component.html
+++ b/angular-app/src/app/sales/sales-masters/sales-item-master/sales-item-master.component.html
@@ -104,7 +104,7 @@
                 </p-table>
             </p-card>
         </div>
-        <p-dialog [contentStyle]="{'overflow':'visible'}" header="Item Master" [(visible)]="displayBasic"
+        <p-dialog [contentStyle]="{'overflow':'visible'}" header="Item new Master" [(visible)]="displayBasic"
             [style]="{width: '80vw'}" [baseZIndex]="10000" [closable]="false">
             <p-toast key="t2"></p-toast>
             <p-confirmDialog [style]="{width: '30vw'}" [baseZIndex]="10000"></p-confirmDialog>
@@ -157,6 +157,23 @@
                                 <div *ngIf="submitted && f.I_NAME.errors" class="alert alert-danger">
                                     <div *ngIf="f.I_NAME.errors.required">Item Name is required</div>
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="form-group col-12 col-md-2">
+                                <label>Tally Name</label>
+                            </div>
+                            <div class="form-group col-12 col-md-4">
+                                <input type="text" class="form-control" formControlName="I_DRAW_NO">
+                                
+                            </div>
+                            <div class="form-group col-12 col-md-2">
+                                <label for="P_I_NAME">Specifications </label>
+                            </div>
+                            <div class="form-group col-12 col-md-4">
+                                <input type="text" class="form-control" formControlName="I_SPECIFICATION">
+                                
                             </div>
                         </div>
                     </form>
