added login form

--- a/angular-app/src/app/login/login.component.html
+++ b/angular-app/src/app/login/login.component.html
@@ -1,58 +1,91 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-8 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
-            <div class="card card-body shadow rounded"
-                [ngStyle]="errorMessage?{'height': '350px'} : {'height': '300px'}">
-                <div class="header">
-                    <i class="far fa-user"></i>
-                </div>
-
-                <form [formGroup]="loginForm">
-                    <!-- <h3 class="text-center mt-0 mb-3"></h3> -->
-                    <div class="form-row">
-
-                        <div class="col-sm-10 offset-sm-1">
-                            <div class="alert alert-danger text-center" role="alert" *ngIf="errorMessage">
-                                <strong>{{errorMessage}}</strong>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-                        <div class="form-group col-sm-8 offset-md-2">
-                            <select class="form-control"
-                                [ngClass]="{'invalid': submitted && f.username.errors, 'valid' : submitted && !f.username.errors && errorMessage==''}">
-
-                                <option *ngFor="let companyMaster of companyMasterDetails"
-                                    [value]="companyMaster.CM_CODE">{{companyMaster.CM_NAME}}</option>
-                            </select>
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-sm-8 offset-sm-2">
-                            <input class="form-control" type="text" formControlName="username" placeholder="Username"
-                                [ngClass]="{'invalid': submitted && f.username.errors, 'valid' : submitted && !f.username.errors && errorMessage==''}">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-sm-8 offset-sm-2">
-                            <input class="form-control" type="password" formControlName="password"
-                                placeholder="Password"
-                                [ngClass]="{'invalid': submitted && f.password.errors, 'valid' : submitted && !f.password.errors   && errorMessage==''}">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col-sm-8 offset-sm-2">
-                            <button value="Submit" class="text-white rounded" (click)="onSubmit();">Login</button>
-                        </div>
-                    </div>
-
-
-                </form>
-            </div>
+  <div class="row justify-content-center">
+    <div class="col-lg-5">
+      <div class="card shadow-lg border-0 rounded-lg mt-5">
+        <div class="card-header">
+          <h3 class="text-center font-weight-light my-4">
+            Login To Your Account
+          </h3>
         </div>
+        <div class="card-body">
+          <form [formGroup]="loginForm">
+            <div
+              class="alert alert-danger text-center"
+              role="alert"
+              *ngIf="errorMessage"
+            >
+              <strong>{{errorMessage}}</strong>
+            </div>
+            <div class="form-group">
+              <label class="small mb-1" for="companyName">Company Name</label>
+              <select
+                class="form-control"
+                formControlName="companyName"
+                [ngClass]="{'invalid': submitted && f.companyName.errors, 'valid' : submitted && !f.companyName.errors && errorMessage==''}"
+              >
+                <option
+                  *ngFor="let companyName of companyNames"
+                  [value]="companyName.CM_ID"
+                  >{{companyName.CM_NAME}}</option
+                >
+              </select>
+            </div>
+            <div class="form-group">
+              <label class="small mb-1" for="financialYear"
+                >Financial Year</label
+              >
+              <select
+                class="form-control"
+                formControlName="financialYear"
+                [ngClass]="{'invalid': submitted && f.financialYear.errors, 'valid' : submitted && !f.financialYear.errors && errorMessage==''}"
+              >
+                <option
+                  *ngFor="let companyMaster of companyMasterDetails"
+                  [value]="companyMaster.CM_CODE"
+                  >From {{companyMaster.CM_OPENING_DATE | date : 'dd/MM/y'}} To
+                  {{companyMaster.CM_CLOSING_DATE | date : 'dd/MM/y'}}
+                </option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label class="small mb-1" for="username">Username</label>
+              <input
+                class="form-control"
+                id="username"
+                type="text"
+                placeholder="Enter username"
+                formControlName="username"
+                [ngClass]="{'invalid': submitted && f.username.errors, 'valid' : submitted && !f.username.errors && errorMessage==''}"
+              />
+            </div>
+            <div class="form-group">
+              <label class="small mb-1" for="password">Password</label>
+              <input
+                class="form-control"
+                id="password"
+                type="password"
+                placeholder="Enter password"
+                formControlName="password"
+                [ngClass]="{'invalid': submitted && f.password.errors, 'valid' : submitted && !f.password.errors   && errorMessage==''}"
+              />
+            </div>
+            <div
+              class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"
+            >
+              <a class="small" href="#">Forgot Password?</a>
+              <button
+                type="submit"
+                name="submit"
+                class="btn btn-primary"
+                value="Login"
+                (click)="onSubmit();"
+              >
+                Login
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-
+  </div>
 </div>
