--- a/angular-app/src/app/masters/nav-masters/nav-masters.component.html
+++ b/angular-app/src/app/masters/nav-masters/nav-masters.component.html
@@ -1,42 +1,70 @@
 <app-nav></app-nav>
-<nav class="header-navbar navbar navbar-with-menu navbar-fixed-top navbar-semi-dark navbar-shadow">
-    <div class="navbar-wrapper">
-        <div class="navbar-header">
-            <ul class="nav navbar-nav">
-                <li class="nav-item mobile-menu hidden-md-up float-xs-left"><a
-                        class="nav-link nav-menu-main menu-toggle hidden-xs"><i class="pi pi-align-justify"
-                            style="font-size: 2rem"></i></a>
-                </li>
-                <li class="nav-item"><a routerLink="" class="navbar-brand nav-link"><img alt="branding logo"
-                            src="assets/images/logo/logo-light.png" data-expand="assets/images/logo/logo-light.png"
-                            data-collapse="assets/images/logo/logo-small.png" class="brand-logo"></a>
-                </li>
-                <li class="nav-item hidden-md-up float-xs-right"><a data-toggle="collapse" data-target="#navbar-mobile"
-                        class="nav-link open-navbar-container"><i class="pi pi-ellipsis-h"></i></a></li>
-            </ul>
-        </div>
-        <div class="navbar-container content container-fluid">
-            <div id="navbar-mobile" class="collapse navbar-toggleable-sm">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item hidden-sm-down"><a class="nav-link nav-menu-main menu-toggle hidden-xs"><i
-                                class="pi pi-align-justify"> </i></a></li>
-                    <li class="nav-item"><a class="nav-link hidden-xs">FY 2020-2021</a></li>
-
-
-
-                </ul>
-                <ul class="nav navbar-nav float-xs-right">
-
-
-                    <li class="dropdown dropdown-user nav-item" style="padding-top:10px;"><a href="#"
-                            data-toggle="dropdown" class="nav-link dropdown-user-link"><span>{{user}}</span><i
-                                class="fas fa-caret-down"></i></a>
-                        <div class="dropdown-menu dropdown-menu-right"><a (click)="router.navigate(['logout'])"
-                                class="dropdown-item"><i class="fas fa-sign-out-alt"></i> logout</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<nav
+  class="header-navbar navbar navbar-with-menu navbar-fixed-top navbar-semi-dark navbar-shadow"
+>
+  <div class="navbar-wrapper">
+    <div class="navbar-header">
+      <ul class="nav navbar-nav">
+        <li class="nav-item mobile-menu hidden-md-up float-xs-left">
+          <a class="nav-link nav-menu-main menu-toggle hidden-xs"
+            ><i class="pi pi-align-justify" style="font-size: 2rem;"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="" class="navbar-brand nav-link"
+            ><img
+              alt="branding logo"
+              src="assets/images/logo/logo-light.png"
+              data-expand="assets/images/logo/logo-light.png"
+              data-collapse="assets/images/logo/logo-small.png"
+              class="brand-logo"
+          /></a>
+        </li>
+        <li class="nav-item hidden-md-up float-xs-right">
+          <a
+            data-toggle="collapse"
+            data-target="#navbar-mobile"
+            class="nav-link open-navbar-container"
+            ><i class="pi pi-ellipsis-h"></i
+          ></a>
+        </li>
+      </ul>
     </div>
+    <div class="navbar-container content container-fluid">
+      <div id="navbar-mobile" class="collapse navbar-toggleable-sm">
+        <ul class="nav navbar-nav">
+          <li class="nav-item hidden-sm-down">
+            <a class="nav-link nav-menu-main menu-toggle hidden-xs"
+              ><i class="pi pi-align-justify"> </i
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link hidden-xs">FY 2020-2021</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav float-xs-right">
+          <li
+            class="dropdown dropdown-user nav-item"
+            style="padding-top: 10px;"
+          >
+            <a
+              href="#"
+              data-toggle="dropdown"
+              class="nav-link dropdown-user-link"
+              ><span>{{user}}</span><i class="fas fa-caret-down"></i
+            ></a>
+            <div class="dropdown-menu dropdown-menu-right">
+              <a
+                (click)="router.navigate(['administrator'])"
+                class="dropdown-item"
+                ><i class="fas fa-user-cog"></i> Administrator</a
+              ><a (click)="router.navigate(['logout'])" class="dropdown-item"
+                ><i class="fas fa-sign-out-alt"></i> logout</a
+              >
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </nav>
