--- a/angular-app/src/app/sales/nav-sales/nav-sales.component.html
+++ b/angular-app/src/app/sales/nav-sales/nav-sales.component.html
@@ -1,65 +1,124 @@
 <!-- / main menu-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <div class="container-fluid">
+    <button
+      type="button"
+      id="sidebarCollapse"
+      class="btn bg-gradient-gray-dark text-white"
+    >
+      <i class="fas fa-align-justify"></i>
+    </button>
 
-        <button type="button" id="sidebarCollapse" class="btn btn-info">
-            <i class="fas fa-align-left"></i>
+    <button
+      class="btn d-inline-block d-lg-none ml-auto"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-chevron-down"></i>
+    </button>
 
-        </button>
-        <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
-            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fas fa-align-justify"></i>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">FY 2020-2021</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-code-branch"></i> Masters <i class="fas fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a (click)="router.navigate(['sales/masters/itemMaster'])" class="dropdown-item">Item
-                            Master</a>
-                        <a (click)="router.navigate(['sales/masters/itemUnitMaster'])" class="dropdown-item">Item
-                            Unit
-                            Master</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-exchange-alt" style="font-size:0.9rem;"></i> Transaction <i
-                            class="fas fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a (click)="router.navigate(['sales/transaction/bom'])" class="dropdown-item">Bill Of
-                            Material</a>
-                        <a (click)="router.navigate(['sales/transaction/salesorder'])" class="dropdown-item">Sales
-                            Order</a>
-                    </div>
-                </li>
-                <li class="nav-item"><a class="nav-link" (click)="router.navigate(['sales/reports'])"><i
-                            class="fas fa-file-alt"></i> Reports </a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-user"></i> {{user}} <i class="fas fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a (click)="router.navigate(['logout'])" class="dropdown-item"><i
-                                class="fas fa-sign-out-alt"></i> logout</a>
-
-                    </div>
-                </li>
-
-            </ul>
-        </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="nav navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">FY 2020-2021</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <i class="fas fa-code-branch"></i> Masters
+            <i class="fas fa-caret-down"></i>
+          </a>
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="navbarDropdown"
+          >
+            <a
+              (click)="router.navigate(['sales/masters/itemMaster'])"
+              class="dropdown-item"
+              >Item Master</a
+            >
+            <a
+              (click)="router.navigate(['sales/masters/itemUnitMaster'])"
+              class="dropdown-item"
+              >Item Unit Master</a
+            >
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <i class="fas fa-exchange-alt" style="font-size: 0.9rem;"></i>
+            Transaction <i class="fas fa-caret-down"></i>
+          </a>
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="navbarDropdown"
+          >
+            <a
+              (click)="router.navigate(['sales/transaction/bom'])"
+              class="dropdown-item"
+              >Bill Of Material</a
+            >
+            <a
+              (click)="router.navigate(['sales/transaction/salesorder'])"
+              class="dropdown-item"
+              >Sales Order</a
+            >
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="router.navigate(['sales/reports'])"
+            ><i class="fas fa-file-alt"></i> Reports
+          </a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <i class="fas fa-user"></i> {{user}}
+            <i class="fas fa-caret-down"></i>
+          </a>
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="navbarDropdown"
+          >
+            <a
+              (click)="router.navigate(['administrator'])"
+              class="dropdown-item"
+              ><i class="fas fa-user-cog"></i> Administrator</a
+            >
+            <a (click)="router.navigate(['logout'])" class="dropdown-item"
+              ><i class="fas fa-sign-out-alt"></i> Logout</a
+            >
+          </div>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
